# sirencodec

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  README.md  RESEARCH.md  ROADMAP_2026.md  THESIS_PIPELINE.md  bench_fps.py  bench_lowfps.py  commit_convention.txt  data_pipeline.py  package-lock.json  precompute_mels.py  pyproject.toml  recursive_quantizer.py  requirements.txt  results.tsv  run.py  run_training.sh  test_inference.py  test_spectrogram.py  train_mel_refiner.py  train_pipeline.py  train_vocos_distill.py  train_vocos_vq.py  verify_sections_5_6.py  watch.py
.github/workflows/: ci.yml
archive/legacy/: README.md
archive/legacy/research-notes/: CONVENTIONS.original.md  GUIDE.original.md  ROADMAP_2026.original.md
archive/legacy/root-snapshot/: README.original.md  RESEARCH.md  SYSTEM.md  agent.md  bench_fps.py  bench_lowfps.py  commit_convention.txt  data_pipeline.py  hifigan_vocoder.py  mel_refiner.py  precompute_mels.py  results.tsv  train.py  train_pipeline.py  train_vocos_vq.py
archive/legacy/root-snapshot/autoresearch-mlx/: program.md  pyproject.toml  results.tsv
autoresearch-mlx/: .gitignore  README.md  prepare.py  results.tsv  run_replicas.sh  train.py
configs/: README.md  ab_50_50.json  abcd.json  abd.json  sub1k_200.json  sub1k_5090_no_phases_200.json  sub1k_5090_no_phases_latent_post_200.json  sub1k_5090_stable_200.json  sub1k_harmonic_20.json  sub1k_semantic_ft_30.json
cpp/sirencodec_infer/: CMakeLists.txt  README.md
cpp/sirencodec_infer/benchmarks/: litert_benchmark.cpp  litert_dataset_benchmark.cpp
cpp/sirencodec_infer/include/sirencodec/: audio_wav.hpp  litert_runner.hpp  metrics.hpp
cpp/sirencodec_infer/src/: audio_wav.cpp  litert_main.cpp  litert_runner.cpp  metrics.cpp
cpp/sirencodec_infer/tests/: litert_smoke_tests.cpp
docs/: CONVENTIONS.txt  GUIDE.md  GUIDE.original.md  RESEARCH.original.md  ROADMAP_2026.md  branch.md  mlx_codec_architecture.tex  pierwsza_prezentacja_slide.bib  pierwsza_prezentacja_slide.tex
docs/superpowers/plans/: 2026-06-12-two-band-codec-implementation.md  2026-06-14-thesis-branch-normalization.md
docs/superpowers/specs/: 2026-06-02-web-microphone-encode-decode-design.md  2026-06-12-training-curves-run-design.md  2026-06-12-two-band-codec-design.md  2026-06-13-all-branches-production-cleanup-design.md  2026-06-14-thesis-branch-normalization-design.md
experiments/moj_nowy_etap/: log.tsv  resume_state.json
experiments/nl4_fsq3_94fps/: log.tsv
experiments/nl4_fsq3_94fps/checkpoints/: codec_final.pt
experiments/nl4_fsq3_94fps_warm15k_50k/: log.tsv
experiments/nl4_fsq3_94fps_warm15k_50k/checkpoints/: codec_final.pt  codec_step10000.pt  codec_step15000.pt  codec_step20000.pt  codec_step25000.pt  codec_step30000.pt  codec_step35000.pt  codec_step40000.pt  codec_step45000.pt  codec_step5000.pt
experiments/nl4_fsq4_94fps_long/: log.tsv  resume_state.json
experiments/nl4_fsq4_94fps_long/checkpoints/: codec_step45000.pt  codec_step50000.pt  codec_step55000.pt  codec_step60000.pt  codec_step65000.pt  codec_step70000.pt  codec_step75000.pt
experiments/nl4_fsq4_94fps_warm15k_50k/: log.tsv
experiments/nl4_fsq4_94fps_warm15k_50k/checkpoints/: codec_final.pt  codec_step10000.pt  codec_step15000.pt  codec_step20000.pt  codec_step25000.pt  codec_step30000.pt  codec_step35000.pt  codec_step40000.pt  codec_step45000.pt  codec_step5000.pt
experiments/nl4_fsq4_L4_94fps_warm15k_50k/: log.tsv
experiments/nl4_fsq4_L4_94fps_warm15k_50k/checkpoints/: codec_step10000.pt  codec_step15000.pt  codec_step20000.pt  codec_step25000.pt  codec_step30000.pt  codec_step35000.pt  codec_step40000.pt  codec_step45000.pt  codec_step5000.pt
experiments/pca4_fsq3_94fps/: log.tsv
experiments/pca4_fsq3_94fps/checkpoints/: codec_step10000.pt  codec_step15000.pt  codec_step20000.pt  codec_step5000.pt
overleaf/: bibliografia.bib  main.tex  ppfcmthesis.cls
overleaf/chapters/: 01-wstep.tex  02-teoria.tex  03-metoda-implementacja.tex  04-eksperymenty.tex  05-zakonczenie.tex  zalacznik.tex
overleaf/chapters/wymagania_szablonu/: 00-checklista-wymagan.tex
preprocessing/: describe_cv.py
runs/control315000_postlava_hp020_sem000_floor035_b8_20260514_112608/: experiment_note.txt  train_command.txt
runs/control315000_postlava_hp020_sem000_floor035_b8_20260514_112608/checkpoints/: ckpt_step329999.meta.json
runs/control315000_postlava_hp020_sem000_floor035_b8_20260514_112608/fixed8_eval/: metrics.tsv
scripts/: README_github_push.txt  build_thesis_pdf.ps1  compare_nl_vs_pca.py  docker_git_sync.sh  download_train_clean_360.sh  export_codec_wav.py  plot_logs.py  run_mlx_gannless.sh  run_moj_nowy_etap.sh  run_moj_nowy_etap_ddp8.sh  run_nl_ab.sh  run_nl_fsq4_continue_long.sh  run_nl_sequential.sh  run_semantic_ft_5090.sh  run_thesis_sweep.sh  run_training.sh  train_cuda_clean100_cb32x3_baseline.sh  validate_branch_layout.py
src/sirencodec/: __init__.py  config.py  data_pipeline.py  diffusion_mel.py  eval_metrics.py  extras.py  sidecars.py  spectrogram_comparison.py
src/sirencodec/core/: __init__.py  train.py  train_pipeline.py  train_vocos_vq.py
src/sirencodec/cuda/: __init__.py  codec.py  data.py  losses.py  semantic.py  train.py
src/sirencodec/mlx/: __init__.py  codec.py  data.py  kernels.py  losses.py  train.py  (+2 more)
src/sirencodec_mlx/: __init__.py  adaptive.py  codec.py  config.py  data.py  entropy_coding.py  eval_metrics.py  streaming.py  torch_codec.py  torch_data.py  torch_losses.py  train_cuda_main.py  train_mlx_main.py
tests/: test_abr_codec.py  test_codebook_sizes.py  test_mlx_codebook_sizes.py  test_project_smoke.py  test_spectrogram.py  test_two_band_mlx.py
tools/: bench_fps.py  bench_lowfps.py  benchmark_python_dataset.py  convert_mlx_checkpoint_to_cuda.py  diffusion_mel_demo.py  export_cpp_infer_bundle.py  export_litert_models.py  grid_search_mlx.py  infer_cuda.py  infer_mlx.py  inference_checkpoint.py  monitor_fixed8_mlx.py  plot_pipeline_spectrogram.py  render_dataset_benchmark_tables.py  run.py  train_mlx.py  train_two_band_mlx.py  watch.py
wykresy/: combined_logs.csv  presentation_run_summary.csv
(+8 files in other folders)
