[project]
name = "sirencodec"
version = "0.1.0"
description = "SirenCodec CUDA neural audio codec trainer"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "soundfile",
    "matplotlib",
    "torch",
    "torchaudio",
]

[project.scripts]
train = "sirencodec.cuda.train:main"

[tool.uv.sources]
torch = { index = "pytorch-cu130" }
torchaudio = { index = "pytorch-cu130" }

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
