[project]
name = "sirencodec"
version = "0.1.0"
description = "SirenCodec CUDA neural audio codec trainer"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "soundfile",
    "matplotlib",
    "torch; platform_system != 'Darwin'",
    "torchaudio; platform_system != 'Darwin'",
]

[project.optional-dependencies]
dev = ["pytest>=8"]
mlx = ["mlx; platform_system == 'Darwin' and platform_machine == 'arm64'"]

[project.scripts]
train = "sirencodec.cuda.train:main"
train-cuda = "sirencodec.cuda.train:main"
train-cuda-full = "sirencodec.cuda.train:main"
train-mlx = "sirencodec.mlx.train:main"

[tool.uv.sources]
torch = { index = "pytorch-cu130", marker = "platform_system != 'Darwin'" }
torchaudio = { index = "pytorch-cu130", marker = "platform_system != 'Darwin'" }

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
