[project]
name = "autoresearch-mlx"
version = "0.1.0"
description = "Time-budget MLX codec experiments for sirencodec (uses tools/train_mlx.py)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mlx>=0.21.0",
    "numpy>=1.24.0",
    "soundfile>=0.12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["pyproject.toml"]
